2012-12-12  Daniel Willmann

	* Fix possible buffer overflow in functions relying on EET_T_LAST.
	* Fix possible memory corruption in xrandr EDID functions.

2012-12-12  Cedric Bail

	* Add ellipsis support in Evas_Object_Text.

2012-12-12  ChunEon park <hermet@hermet.pe.kr>

        * Fix the evas gl line incorrect position problem.

2012-12-11  Cedric Bail

	* Fix leak eet_pbkdf2_sha1 with OpenSSL.

2012-12-10  Gustavo Sverzut Barbieri (k-s)

	* Added ECORE_GETOPT_ACTION_BREAK to force breaking out of argument
	parsing logic (will behabe same as GNU's "--", useful for xterm -e)

2012-12-07  Cedric Bail

	* Don't leak fd on exec.

2012-12-07 Sung W. Park (sung_)

	* Added EVAS_GL_LINE_NO_OFFSET_HACK to turn off the line coordinate
          fiddling that was originally in the gl backend code. The offset
          fiddling caused issues with some ARM target GPU drivers.
        * Fixed polygon rendering bug in GL backend when there are cutouts.

2012-12-05  Gustavo Sverzut Barbieri (k-s)

	* Removed DirectFB support (both ecore_directfb, evas and ecore_evas).
	* Removed XRender, WinCE, X11-16 and X11-8 ecore_evas support.
	* Bumped gnutls version requirement to >= 2.11 (released in 2010).
	* Bumped GNU/libc requirement to >= 2.4 for inotify (sys/inotify.h).

2012-12-04  Gwanglim Lee

        * Add window profile support:
        * Add ecore_evas and ecore_x APIs to support the window profile.
        * Implement window profile for ecore_evas_x, ecore_evas_extn_socket,
          ecore_evas_extn_plug and ecore_evas_buffer.
        * Deprecate ECORE_X_ATOM_E_PROFILE and ECORE_X_ATOM_E_PROFILE_LIST.
        * Deprecate ecore_x_e_window_profile_list_set. Use
          ecore_x_e_window_available_profiles_set instead.
        * Deprecate ecore_x_e_window_profile_list_get. Use
          ecore_x_e_window_available_profiles_get instead.
        * Add ecore_evas_sub_ecore_evas_list_get API.

2012-12-05  Cedric Bail

	* Fix build of Ecore_Evas_Extn on Solaris 11.
