@@ -78,3 +78,4 @@ Fixes:
     * Fix the gl line incorrect position drawing.
     * Fix possible buffer overflow in functions relying on EET_T_LAST
     * Fix possible memory corruption in xrandr EDID functions.
+    * Fix potential segv in software engine native_set code.
