@@ -1,3 +1,7 @@
+2012-12-13  Cedric Bail
+
+	* Fix potential segv in software engine native_set code.
+
 2012-12-12  Daniel Willmann
 
 	* Fix possible buffer overflow in functions relying on EET_T_LAST.
